fix(css): add word wrapping to message summary

--- a/src/stylesheets/pages/contact/success-page.module.scss
+++ b/src/stylesheets/pages/contact/success-page.module.scss
@@ -45,6 +45,7 @@
       font-size: 1.25rem;
       margin-top: 0.5rem;
       text-align: justify;
+      word-wrap: break-word;
     }
   }
 }
